--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sendsmart2",
+  "name": "fibretransfer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -35,7 +35,6 @@
     "shadcn": "^3.8.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
-    "vitest": "^4.0.18"
+    "typescript": "^5"
   }
 }
